# azure-search-openai-demo

./: .dockerignore  .env.example  .env.patentsberta.example  .env.template  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  =0.0.11  AGENTS.md  AGENTS.pl.md  AGENT_API_OPTIMIZATION.md  AGENT_API_REFACTORING_COMPLETE.md  AGENT_REFACTORING_SUMMARY.md  AGENT_SYSTEM_INTEGRATION.md  APP_PY_INTEGRATION_PLAN.md  AUTOMATION_README.md  AUTOMATION_SUMMARY.md  Azureresources-SS.csv  CHANGELOG.md  CLAUDE.md  CONFIGURACION_AIBOT_SITE.md  CONTRIBUTING.md  CONTRIBUTING.pl.md  CORPORATE_ASSESSMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  DataIngestion.drawio  Dockerfile  ESTADO_ACTUAL_DEPLOYMENT.md  FINAL_SUMMARY.md  FOUNDRY_AZURE_SETUP.md  FOUNDRY_VERIFICATION.md  FRONTEND_PILOT_UPDATES.md  IMPLEMENTATION_STRATEGY_ANALYSIS.md  INTEGRATION_COMPLETE.md  LAUNCH_DETAILED_PLAN.md  LICENSE  LICENSE.md  (+98 more)
.azure/: README.md  config.json
.azure-pipelines/: checkovValidation.yaml  precommitValidation.yaml  psruleValidation.yaml  templateanalyzerValidation.yaml
.azure__idx/: config.json
.azure__pvt/: config.json
.claude/: settings.json
.devcontainer/: Dockerfile  dev container  devcontainer.json  post-create.sh  post-start.sh
.github/: CODEOWNERS  CODE_OF_CONDUCT.pl.md  ISSUE_TEMPLATE.md  ISSUE_TEMPLATE.pl.md  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.pl.md  copilot-instructions.md  dependabot.yaml
.scan_RAG-App-Basic-Scan_20260118_190103/: 095c01b1-10f7-4cf0-ac4f-797f23057908.jsonl  334b654d-50f1-4e1c-b279-df8de2960911.jsonl  3511fda5-c5ee-4049-a069-338d6270f96f.jsonl  baseline_hate_unfairness_893ec106-2975-4ef4-bba2-e0258e2f58ca.json  baseline_self_harm_d2dc58bf-dc4f-48b9-90b3-f5972d98493f.json  baseline_sexual_941d1c15-18fa-4756-912f-e037ece76789.json  baseline_violence_0adbb039-8779-4a32-b0c7-c255b145bbd7.json  bbde68fd-9961-45e6-99c0-d61a84370892.jsonl  final_results.json  instance_results.json  redteam_info.json  scorecard.txt
.venv_test/: pyvenv.cfg
Erkan-OpenAISearch/: CHANGELOG.md
NewDeploymentWithPDF/: data.txt  test.py
OpenAISearch/: azure.yaml
aca-host/: README.md  azure.yaml
agents/: .deployment  .dockerignore  .env.example  .env.test  CASINO_IMPROVEMENTS.md  Dockerfile  README.md  agent_app.py  casino_improved.py  copilot-plugin-manifest.json  copilot-plugin-manifest.template.json  deploy-docker-quick.ps1  deploy-docker.ps1  deploy-docker.sh  deploy-to-azure.ps1  docker-compose.override.yml.example  docker-compose.yml  install-azure-cli.ps1  main.py  mock_backend.py  pytest.ini  requirements.txt  startup.sh  test_backend_integration.py  test_teams_integration.py  update-manifest.ps1
app/: check.sh  debug.ps1  debug.sh  diagno.sh  mypy.ini  package-lock.json  package.json  run.ps1  start.cmd  start.ps1  start.sh  startLocalBackend.ps1  startLocalFrontend.ps1
app/hrchatbot/backend/: .dockerignore  Dockerfile  app.py  custom_uvicorn_worker.py  decorators.py  main.py  prepdocs.py  pyproject.toml
app/hrchatbot/backend/approaches/: approach.py  chatapproach.py  chatreadretrieveread.py  chatreadretrievereadvision.py  retrievethenread.py  retrievethenreadvision.py
app/hrchatbot/backend/chat_history/: cosmosdb.py
app/hrchatbot/backend/prepdocslib/: csvparser.py  embeddings.py  htmlparser.py  integratedvectorizerstrategy.py  jsonparser.py  listfilestrategy.py  page.py  pdfparser.py  strategy.py  textsplitter.py
azure-search-openai-demo/: pytest.ini
ci-linkscraping/: downloadpages.py  findlinks.py  findlinkslocal.py  readme.md  requirements.txt
containerapps/: README.md  azure.yaml
custom-embedding-service/: Dockerfile  README.md  app.py  constants.py  requirements.txt
data/: #.html  #Main.html  #other.txt  (Clone) AT_Passport_info_OLD_VERSION.txt  (Clone) GoldenRecordGR.txt  10-step guide to starting a business — business.govt.nz.html  2022-go3476.html  2023-07-26 Progressive procurement reporting results 1 July 22 to 31 December 2022.pdf.url  52-week-reapplication-for-jobseeker-support.html.html  52-week-reapplication-for-jobseeker-support.html.txt  52-week-reapplication-for-sole-parent-support.html.html  52-week-reapplication-for-sole-parent-support.html.txt  AFM_discard.txt  ATA 30 days user access script-WLI.docx  AT_Passport_info.txt  AWS -Backups are monitored and failures are identified and handled via incident management.docx  AWS -Handle almost overdue tickets .docx  AWS Subscription capacity.docx  AWS- Patch Management (check and execution).docx  AWS- Validate Security Certificates (applicable only for point to site and application gateways).docx  AWS-Check cost saving from AWS recommendations.docx  AWS-Check if described Monitoring thresholds are sufficient_WLI.docx  Angebot 1.docx  (+1368 more)
evaluation_framework/: README.md  dashboard.py  eval_config.py  evaluation.py  golden_generation.py  llm_wrapper.py  models.py  pyproject.toml  requirements.in  run_evaluation.py  system_rag.py  test_file.py  utils.py
(+3914 files in other folders)
