[tool.ruff]
target-version = "py38"
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E701"] # line too long, multiple statements on one line
src = ["app/backend", "scripts"]

[tool.ruff.isort]
known-local-folder = ["scripts"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["app/backend", "scripts"]

[tool.coverage.paths]
source = ["scripts", "app"]

[tool.coverage.report]
show_missing = true

[tool.mypy]
check_untyped_defs = true
python_version = 3.9

[[tool.mypy.overrides]]
module = [
    "msal.*"
]
ignore_missing_imports = true

[tool.poetry]
name = "azure-search-openai-demo"  # Skutečný název vašeho projektu
version = "1.0.0"  # Start with 1.0.0 or update to the next appropriate version
description = "A demo project integrating Azure Search with OpenAI"  # Popis vašeho projektu
authors = ["Jméno Autora <email@domena.com>"]  # Vaše jméno a email

[tool.poetry.dependencies]
python = "^3.8"  # Verze Pythonu, kterou projekt vyžaduje

[tool.poetry.dev-dependencies]
pytest = "^5.2"  # Případné vývojové závislosti
