[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "govgpt"
version = "0.1.0"
description = "GovGPT Evaluation Framework"
authors = [ "Your Name <your.email@example.com>",]

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "^1.19.0"
quart = "^0.19.9"
quart-cors = "^0.7.0"
openai = ">=1.3.7"
numpy = ">=1,<2.1.0"
tiktoken = "^0.8.0"
tenacity = "^8.4.2"
azure-ai-documentintelligence = "^1.0.0b4"
azure-cognitiveservices-speech = "^1.41.1"
azure-search-documents = "11.6.0b1"
azure-storage-blob = "^12.24.0"
azure-storage-file-datalake = "^12.18.0"
uvicorn = "^0.32.0"
aiohttp = "^3.11.6"
azure-monitor-opentelemetry = "^1.5.0"
opentelemetry-instrumentation-asgi = "^0.45b0"
opentelemetry-instrumentation-httpx = "^0.45b0"
opentelemetry-instrumentation-requests = "^0.45b0"
opentelemetry-instrumentation-aiohttp-client = "^0.45b0"
opentelemetry-instrumentation-openai = "^0.21.1"
msal = "^1.31.1"
cryptography = "^43.0.3"
PyJWT = "^2.10.0"
Pillow = "^11.0.0"
types-Pillow = "^10.2.0.20240822"
pypdf = "^5.1.0"
fpdf = "1.7.2"
PyMuPDF = "^1.24.14"
plotly = "5.24.1"
streamlit = "1.40.2"
beautifulsoup4 = "^4.12.3"
types-beautifulsoup4 = "^4.12.0.20241020"
msgraph-sdk = "1.1.0"
openai-messages-token-helper = "^0.1.10"
deepeval = "1.5.6"
instructor = "1.4"
